Employer Project/src/App.css
/*
Your selected colors:

    Primary: #e8e8e8 (RGB: 232, 232, 232)
    Secondary: #050505 (RGB: 5, 5, 5)
    Primary Button: #9c9c9c (RGB: 156, 156, 156)
    Secondary Button: #0f0f0f (RGB: 15, 15, 15)
    Accent: #696969 (RGB: 105, 105, 105)

Realtime Colors link for selected colors: https://realtimecolors.com/?colors=e8e8e8-050505-9c9c9c-0f0f0f-696969

Thanks for using RealtimeColors.com!
*/
@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
.titleFont {
  font-family: 'Passion One', cursive;
}
.mainOuter {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}
.largeText {
  font-size: 10vh;
}
.mediumText {
  font-size: 5vh;
}
.smallText {
  font-size: 2vh;
}
.primaryColour {
  color: #e8e8e8;
}
.secondaryColour {
  color: #050505;
}
.primaryButtonColour {
  background-color: #9c9c9c;
}
.secondaryButtonColour {
  background-color: #0f0f0f;
}
.accentColour {
  background-color: #696969;
}
body {
    background-color: #050505;
}
.cardOuter {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: white;
    width: 24vw;
    height: 60vh;
}
.cardHolder {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: repeat(5, 1fr);
    grid-auto-flow: row;
    gap: 3vh;
}

